Fjern gammel vedleggslogikk som ble brukt i overgangsfase for før og etter eget dokumentasjonssteg i uttaksplanen + rydding