@@ -1,19 +1,17 @@
 package no.nav.foreldrepenger.selvbetjening.kontrakt.innsending.mapper;
 
+import static no.nav.foreldrepenger.common.domain.felles.DokumentType.I000044;
 import static no.nav.foreldrepenger.common.domain.felles.InnsendingsType.LASTET_OPP;
 import static org.assertj.core.api.Assertions.assertThat;
 
-import java.net.URI;
 import java.util.List;
 import java.util.UUID;
 
 import org.junit.jupiter.api.Test;
 
 import no.nav.foreldrepenger.common.domain.Saksnummer;
-import no.nav.foreldrepenger.common.domain.felles.DokumentType;
 import no.nav.foreldrepenger.common.domain.felles.EttersendingsType;
 import no.nav.foreldrepenger.common.domain.felles.Vedlegg;
-import no.nav.foreldrepenger.selvbetjening.kontrakt.innsending.dto.MutableVedleggReferanseDto;
 import no.nav.foreldrepenger.selvbetjening.kontrakt.innsending.dto.VedleggDto;
 import no.nav.foreldrepenger.selvbetjening.kontrakt.innsending.dto.ettersendelse.EttersendelseDto;
 import no.nav.foreldrepenger.selvbetjening.kontrakt.innsending.dto.ettersendelse.YtelseType;
@@ -23,17 +21,8 @@ class EttersendelseMappingKonsistensTest {
     @Test
     void testEttersendingMapper() {
         var saksnummer = new Saksnummer("952003131");
-        var vedleggerDto = List.of(
-            new VedleggDto(
-                new byte[] {52, 12, 12, 32, 32, 32, 31, 2},
-                "beskrivelse",
-                new MutableVedleggReferanseDto("123456789"),
-                LASTET_OPP.name(),
-                "I000044",
-                UUID.randomUUID().toString(),
-                URI.create("https://foreldrepengesoknad-api.intern.dev.nav.no/rest/storage/vedlegg/b9974360-6c07-4b9d-acac-14f0f417d200"),
-                    null)
-        );
+        var vedlegg = new VedleggDto(UUID.randomUUID(), I000044, LASTET_OPP, "beskrivelse", null, null);
+        var vedleggerDto = List.of(vedlegg);
 
         var ettersendelseFraFrontend = new EttersendelseDto(null, YtelseType.FORELDREPENGER, saksnummer, null, null, vedleggerDto);
         assertThat(ettersendelseFraFrontend.erTilbakebetalingUttalelse()).isFalse();
@@ -46,9 +35,9 @@ class EttersendelseMappingKonsistensTest {
             .containsExactly(LASTET_OPP);
         assertThat(ettersendelse.vedlegg())
             .extracting(Vedlegg::getDokumentType)
-            .containsExactly(DokumentType.I000044);
-        var metadataVedlegg = ettersendelse.vedlegg().get(0).getMetadata();
-        assertThat(metadataVedlegg.id().referanse()).isEqualTo(vedleggerDto.get(0).getId().referanse());
-        assertThat(metadataVedlegg.dokumentType()).isEqualTo(DokumentType.I000044);
+            .containsExactly(I000044);
+        var metadataVedlegg = ettersendelse.vedlegg().getFirst().getMetadata();
+        assertThat(metadataVedlegg.id().referanse()).isEqualTo(vedleggerDto.getFirst().referanse().verdi()).startsWith("V");
+        assertThat(metadataVedlegg.dokumentType()).isEqualTo(I000044);
     }
 }
